--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!--Sidebar-->
   <shared-sidebar></shared-sidebar>
 
-  <gifs-home-page></gifs-home-page>
+  <gifs-home-page class="flex-fill"></gifs-home-page>
 
   <!---->
 </div>
