--- a/src/app/gifs/services/home/home-page.component.html
+++ b/src/app/gifs/services/home/home-page.component.html
@@ -2,12 +2,12 @@
 <div class="row p-3">
     <div class="col-12">
         <!--Busqueda-->        
-        
-
+        <gifs-search-box></gifs-search-box>
+       
 </div>
 
 <div class="col-12 pt-2">
     <div class="col-12">
         <!--Lista de Gifs-->        
-
+        <gifs-card-list></gifs-card-list>
 </div>
