--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,9 +3,10 @@
     <hr class="text-white">
 
     <div class="list-group list-reset">
-        <button class="list-group-item list-group-item-action">
-            Valorant
+        <button *ngFor="let tag of searchTags" 
+            class="list-group-item list-group-item-action" 
+            (click)="searchTag(tag)">
+                {{ tag }}
         </button>
     </div>
-
 </div>
