--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,13 +1,15 @@
 <div class="row">
 
-    <div class="col-md-3 col-sm-6">
+    <div class="col-md-3 col-sm-6"
+    *ngFor="let gif of gifs"
+    >
 
         <div class="card mb-2 text-center bg-dark">
             <!--TODO: Crear Imagen-->
 
             <div class="card-body text-white">
                 <p class="Card-text">
-                    Hola Mundo
+                    {{ gif.title }}
                 </p>
             </div>
 
