--- a/src/app/gifs/pages/home/home-page.component.html
+++ b/src/app/gifs/pages/home/home-page.component.html
@@ -9,5 +9,5 @@
 <div class="col-12 pt-2">
     <div class="col-12">
         <!--Lista de Gifs-->        
-        <gifs-card-list></gifs-card-list>
+        <gifs-card-list [gifs]="gifs"></gifs-card-list>
 </div>
