Imagenes en las cards

--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -7,10 +7,16 @@
         <div class="card mb-2 text-center bg-dark">
             <!--TODO: Crear Imagen-->
 
+            <img 
+            [src]="gif.images.downsized_medium.url" 
+            [alt]="gif.title" 
+            class="card-img-top">
+
             <div class="card-body text-white">
                 <p class="Card-text">
                     {{ gif.title }}
                 </p>
+
             </div>
 
         </div>
