--- a/src/app/gifs/components/card/card.component.html
+++ b/src/app/gifs/components/card/card.component.html
@@ -1,10 +1,12 @@
 <div class="card mb-2 text-center bg-dark">
-    <img 
+  <!-- <img 
       [src]="gif.images.original.url" 
       [alt]="gif.title"
       class="card-img-top"
-    >
-    <div class="card-body text-white">
-      <p class="card-text">{{ gif.title }}</p>
-    </div>
+    > -->
+  <shared-lazy-image [url]="gif.images.original.url" [alt]="gif.title  || 'No tittle'"></shared-lazy-image>
+
+  <div class="card-body text-white">
+    <p class="card-text">{{ gif.title || 'No tittle' }}</p>
   </div>
+</div>
